# Project1-BitBoard-Checkers

./: CMakeLists.txt  README.md  bitops.c  bitops.h  board.c  board.h  game.c  game.h  main.c
